    are ignored when calculating the bounding box
  - added axis3d, axes3d, box3d, mtext3d, title3d functions from djmrgl for 
    annotating plots.
  - added plot3d high level plot function
  - added material3d, which can both set and query material properties; changed
    most *3d functions so they leave material invariant across calls.
  - changed open3d() to set background and material defaults
  - added aspect3d to control the aspect ratio of the bounding box.
  - added xAxis, yAxis and zAxis mouse modes, set zAxis as r3d default.
  - added persp3d function
  - changed error messages to go through REprintf in X11 and OSX
  - fixed segfault if rgl_init failed
  - converted type of viewport arg in user2window and window2user calls
  - if the rgl_init call fails, the package will still load with a warning (but
    most function calls will result in errors).
  - added par3d("scale") to handle aspect3d operations internally.
  - added ellipse3d() generic and methods for drawing confidence ellipsoids
  - added decorate3d() to draw all the decorations, plot3d.qmesh3d() method.
  - changed zoom to use ratio scale over larger range
  - fixed bug causing jump after resize in Mac OSX (and maybe other platforms)  
  - rgl.primitive now does sanity checks on inputs

v0.67-2
  - minor correction

v0.67-3
  - fixed sphere drawing so spheres are spheres regardless of par3d("scale")
  - added type="s" to plot3d to draw spheres
  - fixed handling of "..." in axis related functions
  - added full MDI support
  - removed use of List and ListIterator internally
  - fixed handling of axes and boxes when a coordinate had zero extent
  - changed rgl.viewpoint default to be compatible with r3dDefaults
  - added id return values to primitives and higher level functions, 
    and to rgl.pop(); added rgl.ids() to report on them.
  - updated gl2ps to version 1.3.1, adding support for svg and pgf output formats.
    